test/trivial/shannon/condReturn.good
condReturn.chpl:19: error: illegal use of function that does not return a value: 'foo'
